--- a/index.html.html
+++ b/index.html.html
@@ -11,7 +11,7 @@
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
         <a href="C:\Users\micke\Desktop\Olayvar BSIT 1-A WEB\social.html"><button type="submit">Log In</button></a>
-        <p>Don't have an account?<a href="C:\Users\micke\Desktop\Olayvar BSIT 1-A WEB\sign.html">Sign Up</a></p>
+        <p>Don't have an account?<a href="sign.html">Sign Up</a></p>
       </div>
     </div>
   </div>
