--- a/sign.html
+++ b/sign.html
@@ -20,7 +20,7 @@
       <input type="password" id="password" name="password" required>
     </div>
     <div class="form-group">
-      <a href="C:\Users\micke\Desktop\Olayvar BSIT 1-A WEB\social.html"><input type="submit" value="Sign Up"></a>
+      <a href="social.html"><input type="submit" value="Sign Up"></a>
     </div>
   </div>
 </body>
