--- a/social.html
+++ b/social.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <h1 class="top">My Space</h1>
-    <a href="index.html.html" class="logout-button">Logout</a>
+    <a href="index.html" class="logout-button">Logout</a>
   </header>
 
   
