--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="Form">
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
-        <a href="C:\Users\micke\Desktop\Olayvar BSIT 1-A WEB\social.html"><button type="submit">Log In</button></a>
+        <a href="social.html"><button type="submit">Log In</button></a>
         <p>Don't have an account?<a href="sign.html">Sign Up</a></p>
       </div>
     </div>
